--- a/templates/home.html
+++ b/templates/home.html
@@ -174,7 +174,7 @@
         </td>
       <td>{{task.supplier_name}}</td>
       <td>{{task.contract_no}}</td>
-      <td>{{task.form_of_security}}</td>
+      <td>{{task.form_of_Security}}</td>
       <td>{{task.issuing_bank}}</td>
       <td>{{task.issuing_date}}</td>
       <td>{{task.expiry_date}}</td>
