--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -67,77 +67,77 @@
   <div class="form-group row">
   <label class="col-2 col-form-label">Items/Services/Work Dscription</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="title">
+    <input type="text" class="form-control" name="title" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Suppliers Name</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="suppliersname">
+    <input type="text" class="form-control" name="suppliersname" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Cell Phone</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="cellphone">
+    <input type="text" class="form-control" name="cellphone" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Contract No</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="contractno">
+    <input type="text" class="form-control" name="contractno" required="required">
   </div>
 </div> 
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Type of Security</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="typeofsecurity">
+    <input type="text" class="form-control" name="typeofsecurity" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Form of security</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="formofsecurity">
+    <input type="text" class="form-control" name="formofsecurity" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Issuing Bank</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="issuingbank">
+    <input type="text" class="form-control" name="issuingbank" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Reference No</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="referenceno">
+    <input type="text" class="form-control" name="referenceno" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Issuing Date</label>
   <div class="col-10">
-    <input class="form-control" type="date" name="issuingdate">
+    <input class="form-control" type="date" name="issuingdate" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Expiry Date</label>
   <div class="col-10">
-    <input class="form-control" type="date" name="expirydate">
+    <input class="form-control" type="date" name="expirydate" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Informing the suppliers date</label>
   <div class="col-10">
-    <input class="form-control" type="date" name="informsupdate">
+    <input class="form-control" type="date" name="informsupdate" required="required">
   </div>
    <small style="color:red" class="small"><strong><h6>Needs to be communicated atleast 10 days before exipry date</h6></strong>
    </small>
@@ -146,7 +146,7 @@
 <div class="form-group row">
   <label class="col-2 col-form-label">Informing the bank date</label>
   <div class="col-10">
-    <input class="form-control" type="date" name="informbankdate">
+    <input class="form-control" type="date" name="informbankdate" required="required">
   </div>
   <small style="color: red" class="small"><strong><h6>Needs to be inform the bank atleast 4 days before exipry date</h6></strong></small>
 </div>
@@ -154,7 +154,7 @@
 <div class="form-group row">
   <label class="col-2 col-form-label">Amount</label>
   <div class="col-10">
-    <input type="integer" class="form-control" name="amount">
+    <input type="text" class="form-control" name="amount" required="required">
   </div>
 </div>
 
