--- a/templates/createofficer.html
+++ b/templates/createofficer.html
@@ -69,35 +69,35 @@
   <div class="form-group row">
   <label class="col-2 col-form-label">Username</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="username">
+    <input type="text" class="form-control" name="username" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Email</label>
   <div class="col-10">
-    <input type="email" class="form-control" name="email">
+    <input type="email" class="form-control" name="email" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Position</label>
   <div class="col-10">
-    <input type="text" class="form-control" name="position">
+    <input type="text" class="form-control" name="position" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label">Password</label>
   <div class="col-10">
-    <input type="password" class="form-control" name="password1">
-  </div>
+    <input type="password" class="form-control" name="password1" required="required">
+  </div> 
 </div> 
 
 <div class="form-group row">
   <label class="col-2 col-form-label">Confirm Password</label>
   <div class="col-10">
-    <input type="password" class="form-control" name="password2">
+    <input type="password" class="form-control" name="password2" required="required">
   </div>
 </div> 
 
