--- a/templates/guaranteedetail.html
+++ b/templates/guaranteedetail.html
@@ -66,7 +66,7 @@
   <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Items/Services/Work Description</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.title}}" name="title">
+    <input type="text" class="form-control" value="{{task.title}}" name="title" required="required">
   </div>
 </div>
 
@@ -82,49 +82,49 @@
   <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Suppliers Name</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.supplier_name}}" name="suppliersname">
+    <input type="text" class="form-control" value="{{task.supplier_name}}" name="suppliersname" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Cell Phone</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.cell_phone}}" name="cellphone">
+    <input type="text" class="form-control" value="{{task.cell_phone}}" name="cellphone" required="required">
   </div>
 </div>
 
   <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Contract No</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.contract_no}}" name="contractno" disabled="disabled">
+    <input type="text" class="form-control" value="{{task.contract_no}}" name="contractno" required="required">
   </div>
 </div> 
 
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Type of Security</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.type_of_security}}" name="typeofsecurity">
+    <input type="text" class="form-control" value="{{task.types_of_security}}" name="typeofsecurity" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Form of security</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.form_of_security}}" name="formofsecurity">
+    <input type="text" class="form-control" value="{{task.form_of_Security}}" name="formofsecurity" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Issuing Bank</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.issuing_bank}}" name="issuingbank">
+    <input type="text" class="form-control" value="{{task.issuing_bank}}" name="issuingbank" required="required">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Reference No</strong></label>
   <div class="col-10">
-    <input type="text" class="form-control" value="{{task.reference_no}}" name="referenceno">
+    <input type="text" class="form-control" value="{{task.Reference_no}}" name="referenceno" required="required">
   </div>
 </div>
 
@@ -178,14 +178,14 @@
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Amount</strong></label>
   <div class="col-10">
-    <input type="integer" class="form-control" value="{{task.amount}}" name="amount">
+    <input type="text" class="form-control" value="{{task.amount}}" name="amount" disabled="disabled">
   </div>
 </div>
 
 <div class="form-group row">
   <label class="col-2 col-form-label"><strong>Remark</strong></label>
   <div class="col-10">
-    <input type="integer" class="form-control" value="{{task.remark}}" disabled="disabled">
+    <input type="text" class="form-control" value="{{task.remark}}" disabled="disabled">
   </div>
 </div>
 
