--- a/templates/print.html
+++ b/templates/print.html
@@ -45,7 +45,7 @@
       <th scope="col">Form of Security</th>
       <th scope="col">Issuing Bank</th>
       <th scope="col">Reference No.</th>
-      <th scope="col">Issuing date</th>\
+      <th scope="col">Issuing date</th>
       <th scope="col">Expiry date</th>
       <th scope="col">Needs to be communicated 10 days before expiry date</th>
       <th scope="col">Amount</th>
@@ -61,12 +61,12 @@
       {{task.title}}
         </td>
       <td>{{task.supplier_name}}</td>
-      <td>{{task.cellphone}}</td>
+      <td>{{task.cell_phone}}</td>
       <td>{{task.contract_no}}</td>
-      <td>{{task.types_of_securtiy}}</td>
-      <td>{{task.form_of_security}}</td>
+      <td>{{task.types_of_security}}</td>
+      <td>{{task.form_of_Security}}</td>
       <td>{{task.issuing_bank}}</td>
-      <td>{{task.reference_no}}</td>
+      <td>{{task.Reference_no}}</td>
       <td>{{task.issuing_date}}</td>
       <td>{{task.expiry_date}}</td>
       <td>{{task.extend_remindat}}</td>
