--- a/templates/wellcome.html
+++ b/templates/wellcome.html
@@ -74,9 +74,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
+          <h2>Manage Tasks and Guarenties from anywhere you are!</h2>
+          <p class="lead mb-5">Reminder of dates.
+            <a href="https://unsplash.com/">reliable</a>!</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
         </div>
       </div>
@@ -98,7 +98,7 @@
           <h4>
             <strong>All tasks</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <p class="text-faded mb-0">Guarentees date management</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -107,7 +107,7 @@
           <h4>
             <strong>Incompleted</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">reminder of guarentees dates</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -116,9 +116,7 @@
           <h4>
             <strong>Done</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
-            <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+          <p class="text-faded mb-0">Activities marked as finished</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -127,7 +125,7 @@
           <h4>
             <strong>Todo List</strong>
           </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+          <p class="text-faded mb-0">A scheduler to plan and follow up</p>
         </div>
       </div>
     </div>
@@ -137,16 +135,17 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
-        <h2 class="mb-5">Recent Projects</h2>
+        <h3 class="text-secondary mb-0">"The best Leaders are strongly motivated to advance their own careers,and
+         really care about the people they're working with they serve."</h3>
+        <h2 class="mb-5">Always Remember these words</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Stationary</div>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <div class="h2">Raoul Vaneigem</div>
+                <p class="mb-0">"Purchasing power is a license to purchase power"</p>
               </div>
             </div>
             <img class="img-fluid" src="{% static 'img/portfolio-1.jpg' %}" alt="">
@@ -156,8 +155,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Ice Cream</div>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <div class="h2">Munia Khan</div>
+                <p class="mb-0">"You cannot buy trust,you have to earn it"</p>
               </div>
             </div>
             <img class="img-fluid" src="{% static 'img/portfolio-2.jpg' %}" alt="">
@@ -167,8 +166,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Strawberries</div>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <div class="h2">Ralph Waldo Emersen</div>
+                <p class="mb-0">"Money is of no value;it cannot spend itself.All depends on the skill of the spender."</p>
               </div>
             </div>
             <img class="img-fluid" src="{% static 'img/portfolio-3.jpg' %}" alt="">
@@ -178,8 +177,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Workspace</div>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <div class="h2">Sunday Adejela</div>
+                <p class="mb-0">"Anything anybody has was purchased with the currency of time."</p>
               </div>
             </div>
             <img class="img-fluid" src="{% static 'img/portfolio-4.jpg' %}" alt="">
@@ -210,7 +209,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; pcadbub Website 2020</p>
     </div>
   </footer>
 
