--- a/templates/home.html
+++ b/templates/home.html
@@ -143,11 +143,12 @@
       <th scope="col">Description</th>
       <th scope="col">Suppliers name</th>
       <th scope="col">Contract No</th>
+      <th scope="col">Types of Security</th>
       <th scope="col">Form of Security</th>
       <!--
       <th scope="col">Cell phone</th>
       
-      <th scope="col">Types of Security</th>
+      
       <th scope="col">Form of Security</th>
       <th scope="col">Issuing Bank</th>
       <th scope="col">Reference No.</th>S
@@ -157,8 +158,8 @@
       <th scope="col">Issuing date</th>
       <th scope="col">Expiry date</th>
 
-      <th scope="col">communicate with suppliers</th>
-      <th scope="col">communicate with the bank</th>
+      <th scope="col">Communicate with suppliers</th>
+      <th scope="col">Amount</th>
       <th scope="col">Case Remark</th>
       <th scope="col">Extend</th>
       <th scope="col">delete</th>
@@ -174,12 +175,13 @@
         </td>
       <td>{{task.supplier_name}}</td>
       <td>{{task.contract_no}}</td>
+      <td>{{task.types_of_security}}</td>
       <td>{{task.form_of_Security}}</td>
       <td>{{task.issuing_bank}}</td>
       <td>{{task.issuing_date}}</td>
       <td>{{task.expiry_date}}</td>
       <td>{{task.extend_remindat}}</td>
-      <td>{{task.last_remindat}}</td>
+      <td>{{task.amount}}</td>
       <td>{{task.remark}}</td>
       <td scope="col">
         <a href="">
