--- a/templates/print.html
+++ b/templates/print.html
@@ -40,7 +40,7 @@
       <th scope="col">Description</th>
       <th scope="col">Suppliers Name</th>
       <th scope="col">Cell phone</th>
-      <th scope="col">Contact no</th>
+      <th scope="col">Contract no</th>
       <th scope="col">Types of Security</th>
       <th scope="col">Form of Security</th>
       <th scope="col">Issuing Bank</th>
